--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Steve\'s Test App</string>
+    <string name="app_name">Steve\'s Test Application</string>
     <string name="action_settings">Settings</string>
 </resources>
